--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>As vezes sim</h1>
     <h1>As vezes não</h1>
     <h1>Não jogo futebol</h1>
-    <h1>meu nome Tainá :D</h1>
+    <h1>meu nome Tainá</h1>
 </body>
 </html>
